// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderDataMappingPopover Should render OrdinalDataMappingPopover 1`] = `
<OrdinalDataMappingPopover
  dataMappingFunction="INTERPOLATE"
  fieldMetaOptions={
    Object {
      "isEnabled": true,
    }
  }
  onChange={[Function]}
  styleName="lineColor"
  supportedDataMappingFunctions={
    Array [
      "INTERPOLATE",
      "PERCENTILES",
    ]
  }
  supportsFieldMetaFromLocalData={true}
/>
`;

exports[`renderLegendDetailRow categorical Should render categorical legend with breaks from color ramp 1`] = `
<div>
  <EuiFlexGroup
    gutterSize="xs"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="foobar_label"
        delay="regular"
        display="inlineBlock"
        position="top"
        title="Border color"
      >
        <EuiText
          className="eui-textTruncate"
          size="xs"
          style={
            Object {
              "maxWidth": "180px",
            }
          }
        >
          <small>
            <strong>
              foobar_label
            </strong>
          </small>
        </EuiText>
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexGroup
    direction="column"
    gutterSize="none"
  >
    <EuiFlexItem
      key="0"
    >
      <Category
        color="#16C5C0"
        isLinesOnly={false}
        isPointsOnly={true}
        label="US_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="1"
    >
      <Category
        color="#A6EDEA"
        isLinesOnly={false}
        isPointsOnly={true}
        label="CN_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`renderLegendDetailRow categorical Should render categorical legend with breaks from custom 1`] = `""`;

exports[`renderLegendDetailRow ordinal Should render custom ordinal legend with breaks 1`] = `
<div>
  <EuiFlexGroup
    gutterSize="xs"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="foobar_label"
        delay="regular"
        display="inlineBlock"
        position="top"
        title="Border color"
      >
        <EuiText
          className="eui-textTruncate"
          size="xs"
          style={
            Object {
              "maxWidth": "180px",
            }
          }
        >
          <small>
            <strong>
              foobar_label
            </strong>
          </small>
        </EuiText>
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexGroup
    direction="column"
    gutterSize="none"
  >
    <EuiFlexItem
      key="0"
    >
      <Category
        color="#FF0000"
        isLinesOnly={false}
        isPointsOnly={true}
        label="< 10_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="1"
    >
      <Category
        color="#00FF00"
        isLinesOnly={false}
        isPointsOnly={true}
        label=">= 10_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`renderLegendDetailRow ordinal Should render interpolate bands 1`] = `
<div>
  <EuiFlexGroup
    gutterSize="xs"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="foobar_label"
        delay="regular"
        display="inlineBlock"
        position="top"
        title="Border color"
      >
        <EuiText
          className="eui-textTruncate"
          size="xs"
          style={
            Object {
              "maxWidth": "180px",
            }
          }
        >
          <small>
            <strong>
              foobar_label
            </strong>
          </small>
        </EuiText>
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexGroup
    direction="column"
    gutterSize="none"
  >
    <EuiFlexItem
      key="0"
    >
      <Category
        color="#e4eefd"
        isLinesOnly={false}
        isPointsOnly={true}
        label="< 13_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="1"
    >
      <Category
        color="#d3e3fe"
        isLinesOnly={false}
        isPointsOnly={true}
        label="13_format up to 25_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="2"
    >
      <Category
        color="#c1d8fe"
        isLinesOnly={false}
        isPointsOnly={true}
        label="25_format up to 38_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="3"
    >
      <Category
        color="#afceff"
        isLinesOnly={false}
        isPointsOnly={true}
        label="38_format up to 50_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="4"
    >
      <Category
        color="#9dc3ff"
        isLinesOnly={false}
        isPointsOnly={true}
        label="50_format up to 63_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="5"
    >
      <Category
        color="#8bb8ff"
        isLinesOnly={false}
        isPointsOnly={true}
        label="63_format up to 75_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="6"
    >
      <Category
        color="#77adff"
        isLinesOnly={false}
        isPointsOnly={true}
        label="75_format up to 88_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="7"
    >
      <Category
        color="#61a2ff"
        isLinesOnly={false}
        isPointsOnly={true}
        label=">= 88_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`renderLegendDetailRow ordinal Should render percentile bands 1`] = `
<div>
  <EuiFlexGroup
    gutterSize="xs"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="foobar_label"
        delay="regular"
        display="inlineBlock"
        position="top"
        title="Border color"
      >
        <EuiText
          className="eui-textTruncate"
          size="xs"
          style={
            Object {
              "maxWidth": "180px",
            }
          }
        >
          <small>
            <strong>
              foobar_label
            </strong>
          </small>
        </EuiText>
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexGroup
    direction="column"
    gutterSize="none"
  >
    <EuiFlexItem
      key="0"
    >
      <Category
        color="#dfebfd"
        isLinesOnly={false}
        isPointsOnly={true}
        label="< 50th: 5572_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="1"
    >
      <Category
        color="#c7dcfe"
        isLinesOnly={false}
        isPointsOnly={true}
        label="50th: 5572_format up to 75th: 8079_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="2"
    >
      <Category
        color="#afceff"
        isLinesOnly={false}
        isPointsOnly={true}
        label="75th: 8079_format up to 90th: 9607_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="3"
    >
      <Category
        color="#97bfff"
        isLinesOnly={false}
        isPointsOnly={true}
        label="90th: 9607_format up to 95th: 10439_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="4"
    >
      <Category
        color="#7eb1ff"
        isLinesOnly={false}
        isPointsOnly={true}
        label="95th: 10439_format up to 99th: 16857_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="5"
    >
      <Category
        color="#61a2ff"
        isLinesOnly={false}
        isPointsOnly={true}
        label=">= 99th: 16857_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`renderLegendDetailRow ordinal Should render single band when interpolate range is 0 1`] = `
<div>
  <EuiFlexGroup
    gutterSize="xs"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="foobar_label"
        delay="regular"
        display="inlineBlock"
        position="top"
        title="Border color"
      >
        <EuiText
          className="eui-textTruncate"
          size="xs"
          style={
            Object {
              "maxWidth": "180px",
            }
          }
        >
          <small>
            <strong>
              foobar_label
            </strong>
          </small>
        </EuiText>
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexGroup
    direction="column"
    gutterSize="none"
  >
    <EuiFlexItem
      key="0"
    >
      <Category
        color="#61a2ff"
        isLinesOnly={false}
        isPointsOnly={true}
        label="100_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;
